<resources>
    <string name="app_name">铁锈助手</string>
    <string name="dialog_title">权限申请</string>
    <string name="dialog_msg29">我们需要文件管理权限，用于读取模组列表，编辑源文件，导入导出模组。</string>
    <string name="dialog_confirm">授权</string>
    <string name="dialog_close">退出</string>
    <string name="dialog_close2">后台</string>
    <string name="verification">设备验证</string>
    <string name="dialog_close_tip">已转到后台解压。</string>
    <string name="open_type">打开方式</string>
    <string name="parse_file_exception">文件解析异常</string>
    <string name="select_directents">选择目录</string>
    <string name="select_file">选择文件</string>
    <string name="select_file_ok">已选\"%1$s\"</string>
    <string name="root_path">根目录</string>
    <string name="select_image">选择图像</string>
    <string name="change_image">更换图像</string>
    <string name="del_image">移除图像</string>
    <string name="remove">移除</string>
    <string name="remove_image_item">移除位于\"%1$s\"的图像?</string>
    <string name="open">打开</string>
    <string name="open_public">公开</string>
    <string name="open_private">私有</string>
    <string name="open_nottiled">打开NoTiled</string>
    <string name="create_unit_complete">单位创建完成</string>
    <string name="create_unit_failed">单位创建失败</string>
    <string name="create_uniting">正在构建单位...</string>
    <string name="build_unit">构建单位</string>
    <string name="dialog_ok">确定</string>
    <string name="activation_app">激活铁锈助手</string>
    <string name="activation_app_tip">您的激活时间已过，请激活铁锈助手。</string>
    <string name="choose_plan">套餐</string>
    <string name="all_function">全部功能</string>
    <string name="only_one">仅此一次</string>
    <string name="always_allow">始终允许</string>
    <string name="pay_yes">是的，确实收到了</string>
    <string name="pay_no">不，没有</string>
    <string name="creation_assistant">创建助理</string>
    <string name="drag_the_slider_to_set_num">拖动滑块选择数量。</string>
    <string name="dialog_cancel">取消</string>
    <string name="no_longer_prompt">不再提示</string>
    <string name="navigation_tip">共%1$d个项目支持快速导航。</string>
    <string name="qq_pay">QQ钱包</string>
    <string name="wechat_pay">微信支付</string>
    <string name="paypal">PayPal</string>
    <string name="alipay">支付宝</string>
    <string name="dialog_title2">解压</string>
    <string name="dialog_title3">修复</string>
    <string name="dialog_repair">正在修复%1$s的信息文件...</string>
    <string name="dialog_search">正在扫描%1$s...</string>
    <string name="dialog_remove">正在移动%1$s...</string>
    <string name="dialog_packing">正在添加%1$s...</string>
    <string name="menu_title3">数据集</string>
    <string name="file_manager">文件管理器</string>
    <string name="search">搜索</string>
    <string name="photo_album">相册</string>
    <string name="system_file_manager">文件管理器</string>
    <string name="reload_files">刷新</string>
    <string name="convert_template">制作模板</string>
    <string name="open_game_test">测试此单位</string>
    <string name="code_table">代码表</string>
    <string name="edit_function">保存</string>
    <string name="editer_show_line_num">展示行号</string>
    <string name="sync_header">开发者选项</string>
    <string name="mod_title">模组</string>
    <string name="edit_title">代码编辑</string>
    <string name="template_title">模板包</string>
    <string name="reply_title">语言</string>
    <string name="developers_mode">开发者模式</string>
    <string name="developers_mode_off">面向模板，数据集开发者的选项。</string>
    <string name="developers_mode_on">已在某些功能内提供额外的选项。</string>
    <string name="database_directent">数据集存放目录</string>
    <string name="template_directent">模板存放目录</string>
    <string name="auto_create_nomedia">屏蔽系统图库扫描</string>
    <string name="only_load_coniant_language_template_off">其他语言模板将被隐藏。</string>
    <string name="auto_create_nomedia_off">媒体文件将被系统相册扫描。</string>
    <string name="auto_create_nomedia_on">已禁止系统相册扫描媒体文件。</string>
    <string name="messages_header">常规</string>
    <string name="set_up">设置</string>
    <string name="only_load_coniant_language_template">仅加载符合语言的模板</string>
    <string name="map">地图</string>
    <string name="code_navigation">代码导航</string>
    <string name="night_mode">深色主题</string>
    <string name="game_pack">游戏包</string>
    <string name="select_the_game_pack">选择游戏包</string>
    <string name="enable_the_recovery_station">模组回收站</string>
    <string name="manage_the_recovery_station">管理回收站</string>
    <string name="description_of_manage_the_recovery_station">管理您的回收站文件。</string>
    <string name="description_of_the_recovery_station">在您删除模组时，会将模组备份至回收站。</string>
    <string name="select_the_game_package_description">在您的应用列表内设定游戏包。</string>
    <string name="recovery_station_file_save_days">文件保留天数</string>
    <string name="recovery_station_folder">回收站目录</string>
    <string name="donation">捐赠</string>
    <string name="keep_rwmod_file_description">解压模组时，保留源文件。</string>
    <string name="keep_rwmod_file">保留源文件</string>
    <string name="setting_app_language" translatable="false">AppLanguage</string>
    <string name="setting_database_directory" translatable="false">DatabaseDirectory</string>
    <string name="setting_developer_mode" translatable="false">DeveloperMode</string>
    <string name="setting_custom_symbol" translatable="false">CustomSymbol</string>
    <string name="setting_template_directory" translatable="false">TemplateDirectory</string>
    <string name="setting_auto_create_nomedia" translatable="false">AutoCreateNomedia</string>
    <string name="setting_only_load_conant_language_temple" translatable="false">OnlyLoadConantLanguageTemple</string>
    <string name="setting_night_mode" translatable="false">NightMode</string>
    <string name="setting_independent_folder" translatable="false">IndependentFolder</string>
    <string name="setting_keep_rwmod_file" translatable="false">KeepRwmodFile</string>
    <string name="setting_enable_recovery_station" translatable="false">EnableRecoveryStation</string>
    <string name="setting_recovery_station_file_save_days" translatable="false">RecoveryStationFileSaveDays</string>
    <string name="setting_recovery_station_folder" translatable="false">RecoveryStationFolder</string>
    <string name="independent_folder_description">为每个单位创建独立的文件夹。</string>
    <string name="independent_folder">创建独立文件夹</string>
    <string name="start_game">启动游戏</string>
    <string name="about">关于</string>
    <string name="setting_pack_directory" translatable="false">PackDirectory</string>
    <string name="clear_code_cache">清理代码缓存</string>
    <string name="custom_symbol">自定义符号栏</string>
    <string name="setting_identifiers_prompt_number" translatable="false">IdentifiersPromptNumber</string>
    <string name="identifiers_prompt_number">标识符提示数量</string>
    <string name="pack_directory">打包目录</string>
    <string name="mine_bookmarks">我的书签</string>
    <string name="bookmark_manager">书签管理器</string>
    <string name="setting_use_jetBrains_mono_font" translatable="false">UseJetBrainsMonoFont</string>
    <string name="use_jetBrains_mono_font">使用JetBrains Mono字体</string>
    <string name="use_jetBrains_mono_font_describe">助手内置的字体，强烈推荐使用。</string>
    <string name="setting_check_beta_update" translatable="false">CheckBetaUpdate</string>
    <string name="check_beta_update">检查Beta更新</string>
    <string name="check_beta_update_describe">仅在Release版本生效，Beta版本，采用强制更新。</string>
    <string name="value_type_manager_describe">自定义值类型，并将其加入提示。</string>
    <string name="value_type_manager">值类型管理器</string>
    <string name="advanced_search">高级搜索</string>
    <string name="matches_file_names_by_re">按照正则匹配文件名</string>
    <string name="setting_english_editing_mode" translatable="false">EnglishEditingMode</string>
    <string name="english_editing_mode_describe">使用英文编写您的模组，并带有中文提示，语法高亮。</string>
    <string name="english_editing_mode">原生开发模式</string>
    <string name="community">社区</string>
    <string name="night_mode_auto">深色默认不自动开启</string>
    <string name="appearance">外观</string>
    <string name="word_wrap">自动换行</string>
    <string name="activate">激活</string>
    <string name="setting_night_mode_follow_system" translatable="false">NightModeFollowSystem</string>
    <string name="night_mode_follow_system">跟随系统开启深色模式</string>
    <string name="night_mode_follow_system_tip">跟随系统开启或关闭深色模式</string>
    <string name="data_transfer">数据传输</string>
    <string name="using_mobile_networks">允许使用数据网络</string>
    <string name="using_mobile_networks_tip">使用移动网络上传下载模组，可能会产生额外的流量费用。</string>
    <string name="setting_use_mobile_network" translatable="false">usingMobileNetwork</string>
    <string name="warehouse">仓库</string>
    <string name="setting_map_folder" translatable="false">MapFolder</string>
    <string name="map_folder">地图目录</string>
    <string name="setting_mod_folder" translatable="false">ModFolder</string>
    <string name="mod_folder">模组目录</string>
    <string name="setting_use_the_community_as_the_launch_page" translatable="false">UseTheCommunityAsTheLaunchPage</string>
    <string name="use_the_community_as_the_launch_page">使用社区作为启动页面</string>
    <string name="use_the_community_as_the_launch_page_tip">默认启用</string>
    <string name="clear_cache">清理缓存</string>
    <string name="setting_clear_cache" translatable="false">ClearCache</string>
    <string name="clear_cache_description">缓存在应用使用过程中产生，助手通过读取缓存加速。</string>
    <string name="cache">缓存与存储空间</string>
    <string name="search_file_name">文件名</string>
    <string name="search_file_text">文件中包含内容</string>
    <string name="search_unit_name">欲搜索单位名</string>
    <string name="auto_save_describe">当您切换到其他程序时，自动保存代码。</string>
    <string name="auto_save">自动保存</string>
    <string name="setting_auto_save" translatable="false">AutoSave</string>
    <string name="is_code">是代码</string>
    <string name="undo">撤销</string>
    <string name="redo">重做</string>
    <string name="setting_server_address" translatable="false">ServerAddress</string>
    <string name="server_address_configuration">服务器地址配置</string>
    <string name="setting_see_error_info" translatable="false">SeeErrorInfo</string>
    <string name="see_error_info">崩溃日志</string>
    <string name="see_error_info_tip">查看此设备上的崩溃记录。</string>
    <string name="turret_design">炮塔设计</string>
    <string name="experience_the_plan">用户体验计划</string>
    <string name="experience_the_plan_describe">匿名发送软件奔溃信息。</string>
    <string name="update_and_iteration">版本更新与用户体验计划</string>
    <string name="setting_experience_the_plan" translatable="false">experiencePlan</string>
    <string name="display_source_code">显示源代码</string>
    <string name="dynamic_color">动态颜色</string>
    <string name="setting_dynamic_color" translatable="false">DynamicColor</string>
    <string name="setting_clipboard_cue" translatable="false">ClipboardCue</string>
    <string name="dynamic_color_tip">跟随设备壁纸更换主题色。</string>
    <string name="soft">排序</string>
    <string name="file_list_action_sort_by_name">名称</string>
    <string name="file_list_action_sort_by_type">类型</string>
    <string name="file_list_action_sort_by_size">大小</string>
    <string name="file_list_action_sort_by_last_modified">修改时间</string>
    <string name="file_sort_type">文件排序方式</string>
    <string name="setting_file_sort_type" translatable="false">FileSortType</string>
    <string name="setting_simple_display_of_auto_complete_menu" translatable="false">SimpleDisplayOfAutoCompleteMenu</string>
    <string name="customize_edit_text">定制编辑框</string>
    <string name="customize_edit_text_description">定制编辑框字体颜色，编辑框背景图像等等。</string>
    <string name="simple_display_of_auto_complete_menu_describe">隐藏自动完成菜单内的描述和图像。</string>
    <string name="simple_display_of_auto_complete_menu">简版自动完成菜单</string>
    <string name="setting_source_file_type" translatable="false">sourceFileType</string>
    <string name="setting_source_file_type_title">源文件类型</string>
    <string name="setting_source_file_type_describe">配置源文件类型，符合配置格式的文件将以文本编辑形式打开。以逗号分割不同格式。</string>
    <string name="help">帮助</string>
    <string name="clipboard_cue">剪切板提示</string>
    <string name="clipboard_cue_tip">在安卓13及以上系统，应用将内容复制到剪贴板时，弹出提示。</string>
</resources>