<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_soft"
        android:icon="@drawable/ic_outline_sort_24"
        android:title="@string/soft"
        app:showAsAction="always">
        <menu>

            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_sort_by_name"
                    android:title="@string/file_list_action_sort_by_name" />
                <item
                    android:id="@+id/action_sort_by_type"
                    android:title="@string/file_list_action_sort_by_type" />
                <item
                    android:id="@+id/action_sort_by_size"
                    android:title="@string/file_list_action_sort_by_size" />
                <item
                    android:id="@+id/action_sort_by_last_modified"
                    android:title="@string/file_list_action_sort_by_last_modified" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/action_bookmark"
        android:icon="@drawable/ic_outline_bookmarks_24"
        android:title="@string/bookmark_manager"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/bookmark_manager"
                android:title="@string/bookmark_manager" />
            <item
                android:id="@+id/mine_bookmarks"
                android:title="@string/mine_bookmarks">

                <menu>
<!--                    书签列表-->
                </menu>

            </item>
        </menu>

    </item>

    <item
        android:id="@+id/reloadFile"
        android:title="@string/reload_files" />
<!--
    <item
        android:id="@+id/app_bar_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:checked="false"
        android:title="隐藏文件" />-->
    <item
        android:id="@+id/selectFile"
        android:title="@string/select_file">
        <menu>
            <item
                android:id="@+id/photo_album"
                android:title="@string/photo_album" />
            <item
                android:id="@+id/system_file_manager"
                android:title="@string/system_file_manager" />
        </menu>
    </item>
</menu>